# ila

./: .clang-format  CMakeLists.txt  README.md  build.sh  ila.code-workspace  run
cmake/: FindGLEW.cmake  FindSDL2.cmake
scripts/: build.sh  gen.bat  run  run.bat
src/: main.cpp
src/Core/: Common.h  Window.cpp  Window.h
src/Platform/SDL/: SDL.cpp  SDL.h
